--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     color: #111111;
 }
 
+img {
+    display: block;
+}
+
 .container {
     max-width: 85vw;
     margin: 0 auto;
@@ -20,7 +24,9 @@ body {
 
 .titles {
     font-family: 'Oswald', sans-serif;
+    font-size: 2rem;
     font-weight: bold;
+
 }
 
 /* Header */
@@ -35,12 +41,13 @@ body {
     justify-content: space-between;
     align-items: center;
 
-    height: 100px;
+    height: 90px;
 }
 
 .header-area .logo {
     width: 64px;
     height: 64px;
+    object-fit: cover;
 }
 
 .rightside {
@@ -122,4 +129,89 @@ body {
     object-fit: cover;
     border: 6px solid #117050;
     border-radius: 50%;
+}
+
+/* Main Content */
+/* Area 1 */
+.area-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.card-area1{
+    grid-column: 1 / 2;
+}
+
+.card-description {
+    max-width: 390px;
+    margin: 0 auto;
+    padding: 3rem 1rem;
+}
+
+.card-description h2::before {
+    content: "";
+    display: block;
+    width: 130px;
+    height: 15px;
+    background-color: #006341;
+
+    margin-bottom: 0.5rem;
+}
+.card-description h2 {
+    line-height: 1.3;
+    max-width: 350px;
+    margin-bottom: 1rem;
+}
+
+.card-description span {
+    font-style: italic;
+}
+
+.card-description p {
+    margin: 2rem 0;
+}
+
+.btn-content {
+    padding: 0.5rem 2rem;
+    border: 2px solid #454544;
+    border-radius: 0.25rem;
+    
+    color: #454544;
+    text-decoration: none;
+    transition: all 0.7s ;
+}
+
+.btn-content:hover{
+    background-color: #454544;
+    color: #999999;
+}
+
+.picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.area1-img1 {
+    grid-column: 1 / 2 ;
+}
+
+
+.area1-img2{
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+}
+
+/* Area 2 */
+.card-area2 {
+    grid-column: 2 / 3;
+}
+
+.area2-img1 {
+    grid-column: 2 / 3;
+}
+
+.area2-img2 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
 }
