--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ img {
 
 /* Main Content */
 /* Area 1 */
-.area-grid {
+.area-coofee {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -148,7 +148,7 @@ img {
     padding: 3rem 1rem;
 }
 
-.card-description h2::before {
+.card-description .subtitles::before {
     content: "";
     display: block;
     width: 130px;
@@ -157,7 +157,7 @@ img {
 
     margin-bottom: 0.5rem;
 }
-.card-description h2 {
+.card-description .subtitles {
     line-height: 1.3;
     max-width: 350px;
     margin-bottom: 1rem;
@@ -172,7 +172,10 @@ img {
 }
 
 .btn-content {
-    padding: 0.5rem 2rem;
+    display: block;
+    width: 50%;
+    text-align: center;
+    padding: 0.5rem 0;
     border: 2px solid #454544;
     border-radius: 0.25rem;
     
@@ -214,4 +217,24 @@ img {
 .area2-img2 {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+}
+
+/* Caramel Coffee*/
+.area-caramel {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.caramel-background {
+    background: url(assets/bg2.jpg) no-repeat left;
+    background-size: cover;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.area-caramel .card-description {
+    max-width: 300px;
+    margin: 0;
 }
