--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ img {
 }
 
 .container {
-    max-width: 80vw;
+    max-width: 85vw;
     margin: 0 auto;
 }
 
@@ -41,7 +41,7 @@ img {
     justify-content: space-between;
     align-items: center;
 
-    height: 90px;
+    height: 6rem;
 }
 
 .header-area .logo {
@@ -266,7 +266,94 @@ img {
     color: #454544;
 }
 
-/* Tea Time */
+/* Footer */
+footer {
+    background-color: #333333;
+    color: #999999;
+    text-align: center;
+    padding: 2rem 0;
+}
 
+footer a {
+    color: #117050;
+}
+
+footer a:hover {
+    text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .area-coofee {
+        grid-template-columns: 3fr 2fr;
+    }
+}
+
+@media (max-width: 600px) {
+    .rightside form {
+        display: none;
+    }
+
+    .banner {
+        padding: 3rem;
+    }
+
+    .text-banner {
+        max-width: 450px;
+        padding: 0;
+    }
+
+    .text-banner h1 {
+        font-size: 4rem;
+    }
+
+    .area-coofee {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    
+    .coffee-images-row {
+        padding: 0;
+    }
+
+    .coffee-images-row .coffee {
+        width: 100px;
+        height: 100px;
+        align-items: center;
+    }
+
+    .coffee-images-row .coffee img {
+        border: 0;
+    }
+
+    .area-caramel {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .cups-collection {
+        background-position: left;
+        padding: 3rem;
+    }
+
+    .cups-collection .card-description {
+        padding: 1rem;
+    }
+}
+
+@media (max-width: 425px) {
+    
+    .banner {
+        background-position: right;
+    }
+
+    .text-banner h1 {
+        max-width: 300px;
+        font-size: 2.5rem;
+    }
+
+    .cups-collection {
+        padding: 1rem;
+    }
+}
 
 
